<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LaunchPad">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/rqc_logo_1"
                    style="@style/imgHold"/>

                <TextView
                    android:text="@string/tlCreateJobTitle"
                    style="@style/titleText"/>

                <View
                    android:background="@color/black"
                    style="@style/underView"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/newJobBtn"
                    android:text="@string/newJob"
                    style="@style/MyBtn"
                    app:backgroundTint="@null"/>

                <TextView
                    android:text="@string/tlViewOldJob"
                    style="@style/titleText"/>
                <View
                    android:background="@color/black"
                    style="@style/underView"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signOut"
                    android:text="@string/sign_out"
                    style="@style/MyBtn"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/viewQuotes"
                    android:text="@string/viewQuotes"
                    style="@style/MyBtn"/>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/viewDraft"
                    android:text="@string/viewJobDrafts"
                    style="@style/MyBtn"/>
                
                <TextView
                    android:text="@string/tlViewContacts"
                    style="@style/titleText"/>
                <View
                    android:background="@color/black"
                    style="@style/underView"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/contactsBtn"
                    android:text="@string/contacts"
                    style="@style/MyBtn"/>


            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>