<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:contentDescription="Logo"
                    android:src="@drawable/rqc_logo_1"
                    android:layout_marginTop="25dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logOrReg"
                    android:layout_gravity="center"
                    android:layout_margin="25dp"/>

                <Button

                    android:text="@string/logInTxt"
                    android:id="@+id/logInSendBtn"
                    style="@style/MyBtn"
                    app:backgroundTint="@null"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="or"
                    android:layout_gravity="center"
                    android:gravity="center"
                    app:layout_constraintVertical_bias="0.35" />

                <Button
                    android:text="@string/register"
                    android:id="@+id/registerBtn"
                    style="@style/MyBtn"
                    app:backgroundTint="@null"/>

                <Button
                    android:text="@string/sign_out"
                    android:id="@+id/logOutBtn"
                    style="@style/MyBtn"
                    app:backgroundTint="@null"/>
                
                </LinearLayout>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>